Add name field as primary key
